修改模板文件

--- a/bbs/templates/404.html
+++ b/bbs/templates/404.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>404 error</title>
 </head>
 <body>
-这个是用 404 html 的形式处理的
+    定制 404 错误
 </body>
 </html>
