--- a/bbs/templates/base.html
+++ b/bbs/templates/base.html
@@ -128,13 +128,18 @@
     {% endblock %}
 </div>
 <div id='backtotop'>{% block backtotop %}{% endblock %}回到顶部</div>
-<div id='footer'>
+<div id='footer' class="fix-bottom">
     {% block footer %}
     <div id='footer_main'>
         <div class="links">
-            <a class='dark' href='#'>源码地址</a>
+            <a class='dark' href='https://github.com/baiykmax/Node-bbs'>源码地址</a>
         </div>
     </div>
+
+    <div class='col_fade'>
+
+    </div>
+
     {% endblock %}
 </div>
 
