修复部分 async 传染导致页面方法调用异常的问题

--- a/bbs/templates/user/user_all_replies.html
+++ b/bbs/templates/user/user_all_replies.html
@@ -23,7 +23,7 @@
 
                         <li>
                             <a class='dark' target='_blank'>
-                                <span class='big collect-topic-count'> {{ u.involvedTopicNumbers() }} </span>个话题参与
+                                <span class='big collect-topic-count'> {{ involvedTopicNumbers }} </span>个话题参与
                             </a>
                         </li>
 
