解决页面加载异步调用的问题

--- a/bbs/templates/topic/detail.html
+++ b/bbs/templates/topic/detail.html
@@ -1,6 +1,11 @@
 {% extends "../base.html" %}
 {% block title %}Detail{% endblock %}
 
+{% block head %}
+    {{ super() }}
+    <script src="/static/lib/markdownit.js"></script>
+{% endblock %}
+
 {% block main %}
 
     <div id='sidebar'>
@@ -13,10 +18,10 @@
             <div class='inner'>
                 <div class='user_card'>
                     <div>
-                        <a class='user_avatar' href="/user/{{ topic.owner().username }}">
-                            <img src="/user/avatar/{{ topic.owner().avatar }}?v=3&amp;s=120" title="{{ topic.owner().username }}"/>
+                        <a class='user_avatar' href="/user/{{ topic.owner.username }}">
+                            <img src="/user/avatar/{{ topic.owner.avatar }}?v=3&amp;s=120" title="{{ topic.owner.username }}"/>
                         </a>
-                        <span class='user_name'><a class='dark' href="/user/{{ topic.owner().username }}">{{ topic.owner().username }}</a></span>
+                        <span class='user_name'><a class='dark' href="/user/{{ topic.owner.username }}">{{ topic.owner.username }}</a></span>
 
                         <div class='board clearfix'>
                             <div class='floor'>
@@ -26,7 +31,7 @@
                         <div class="space clearfix"></div>
                         <span class="signature">
                             “
-                                {{ topic.owner().note }}
+                                {{ topic.owner.note }}
                             ”
                         </span>
                     </div>
@@ -89,15 +94,15 @@
                     </span>
                     <span>
                         作者
-                        <a href="/user/{{ topic.owner().username }}">
-                            {{ topic.owner().username }}
+                        <a href="/user/{{ topic.owner.username }}">
+                            {{ topic.owner.username }}
                         </a>
                     </span>
                     <span>
                         {{ topic.views }} 次浏览
                     </span>
                     <span>
-                        来自 {{ topic.board().title }}
+                        来自 {{ topic.board.title }}
                     </span>
                 </div>
             </div>
@@ -115,19 +120,19 @@
             <div class='header'>
             <span class='col_fade'>
                 <!-- 过滤器 -->
-                {{ topic.replies() | length }} 回复
+                {{ topicReplies | length }} 回复
             </span>
             </div>
-            {% for r in topic.replies() %}
+            {% for r in topicReplies %}
             <div class='cell reply_area reply_item'>
                 <div class='author_content'>
-                    <a href="/user/{{ r.user().username }}" class="user_avatar">
-                        <img src="/user/avatar/{{ r.user().avatar }}?v=4&amp;s=120"
-                             title="{{ r.user().username }}"/>
+                    <a href="/user/{{ r.user.username }}" class="user_avatar">
+                        <img src="/user/avatar/{{ r.user.avatar }}?v=4&amp;s=120"
+                             title="{{ r.user.username }}"/>
                     </a>
                     <div class='user_info'>
-                        <a class='dark reply_author' href="/user/{{ r.user().username }}">
-                            {{ r.user().username }}
+                        <a class='dark reply_author' href="/user/{{ r.user.username }}">
+                            {{ r.user.username }}
                         </a>
                         <a class="reply_time">
                             {{ loop.index }}楼 • {{ r.created_time | formattedTimeAgo }}
@@ -143,7 +148,7 @@
                     </span>
                     </div>
                 </div>
-                <div class='reply_content from-{{ r.user().username }}'>
+                <div class='reply_content from-{{ r.user.username }}'>
                     <div class="markdown-text">
                         {{ r.content }}
                     </div>
@@ -161,4 +166,13 @@
 
     </div>
 
+{% endblock %}
+
+{% block script %}
+<script>
+    (function () {
+        var md = new window.MarkdownIt();
+        var result = md.render($('.markdown-text'));
+    })();
+</script>
 {% endblock %}
