--- a/bbs/templates/user/user_all_topics.html
+++ b/bbs/templates/user/user_all_topics.html
@@ -64,7 +64,7 @@
                 <span class='col_fade'>{{ u.username }}创建的话题</span>
             </div>
 
-            {% if u.topics() %}
+            {% if userTopics === null %}
 
             <div class='inner'>
                 <p>无话题</p>
@@ -72,7 +72,7 @@
 
             {% else %}
 
-            {% for t in u.topics() %}
+            {% for t in userTopics %}
             <div class='cell'>
 
                 <a class="user_avatar pull-left">
@@ -83,7 +83,7 @@
 
                 <span class="reply_count pull-left">
                         <span class="count_of_replies" title="回复数">
-                            {{ t.replies() | length }}
+                            {{ t.replies | length }}
                         </span>
                     <span class="count_seperator">/</span>
                         <span class="count_of_visits" title='点击数'>
