解决 md 渲染的一些问题

--- a/bbs/templates/index/index.html
+++ b/bbs/templates/index/index.html
@@ -53,7 +53,7 @@
                 </div>
 
                 <div class='form-actions'>
-                    <input type="hidden" name="_csrf" value="{{csrfToken}}">
+                    <!--<input type="hidden" name="_csrf" value="{{csrfToken}}">-->
                     <input type='submit' class='span-primary' value='登录'/>
                     <a href="/register">
                     <span class="span-info">
