--- a/bbs/templates/topic/new.html
+++ b/bbs/templates/topic/new.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="/static/css/style.css" />
     <link rel="stylesheet" href="/static/lib/editor/editor.css" />
     <link rel="stylesheet" href="/static/lib/webuploader/webuploader.css" />
+    <script src="/static/lib/markdownit.js"></script>
     <script src="/static/lib/webuploader/webuploader.withoutimage.js"></script>
     <script src="/static/lib/editor/editor.js"></script>
     <script src="/static/lib/editor/ext.js"></script>
@@ -45,6 +46,6 @@
         (function () {
             var editor = new Editor();
             editor.render($('.editor')[0]);
-        })();
+        })()
     </script>
 {% endblock %}
