--- a/bbs/templates/topic/new.html
+++ b/bbs/templates/topic/new.html
@@ -42,10 +42,11 @@
 {% endblock %}
 
 {% block script %}
-    <script>
-        (function () {
-            var editor = new Editor();
-            editor.render($('.editor')[0]);
-        })()
-    </script>
+    <!--<script>-->
+        <!--(function () {-->
+            <!--var editor = new Editor();-->
+            <!--editor.render($('.editor')[0]);-->
+        <!--})()-->
+    <!--</script>-->
+    <script src="/static/js/topic.js"></script>
 {% endblock %}
