--- a/bbs/templates/topic/index.html
+++ b/bbs/templates/topic/index.html
@@ -29,6 +29,7 @@
                 {% endfor %}
             </div>
             <div class="inner post">
+
                 <div class="topic_list">
                     {% for t in topics %}
                     <div class="cell">
@@ -72,9 +73,60 @@
                     </div>
                     {% endfor %}
                 </div>
+
+                <div class='pagination' current_page='{{ current_page }}'>
+                    <ul>
+                        {% if current_page == 1 %}
+                        <li class='disabled'><a>«</a></li>
+                        {% else %}
+                        <li><a href="/topic?board_id={{ board_id }}&page={{ frontPage }}">«</a></li>
+                        {% endif %}
+
+                        {% if page_start > 1 %}
+                        <li><a>...</a></li>
+                        {% endif %}
+
+                        {% for i in range %}
+                        {% if (i == current_page) %}
+                        <li class='disabled'><a>{{ i }}</a></li>
+                        {% else %}
+                        <li><a href="/topic?board_id={{ board_id }}&page={{ i }}">{{ i }}</a></li>
+                        {% endif %}
+                        {% endfor %}
+
+                        {% if page_end < pages %}
+                        <li><a>...</a></li>
+                        {% endif %}
+
+                        {% if current_page == pages %}
+                        <li class='disabled'><a>»</a></li>
+                        {% else %}
+                        <li><a href="/topic?board_id={{ board_id }}&page={{ nextPage }}">»</a></li>
+                        {% endif %}
+                    </ul>
+                </div>
             </div>
         </div>
 
     </div>
 
+{% endblock %}
+
+{% block script %}
+<script>
+    $(document).ready(function () {
+        var $nav = $('.pagination');
+        var current_page = $nav.attr('current_page');
+        if (current_page) {
+            $nav.find('li').each(function () {
+                var $li = $(this);
+                var $a = $li.find('a');
+                if ($a.html() == current_page) {
+                    $li.addClass('active');
+                    $a.removeAttr('href');
+                }
+            });
+        }
+    });
+</script>
 {% endblock %}
