静态资源 cdn 加速

--- a/bbs/templates/topic/new.html
+++ b/bbs/templates/topic/new.html
@@ -5,9 +5,9 @@
     {{ super() }}
     <link rel="stylesheet" href="/static/css/style.css" />
     <link rel="stylesheet" href="/static/lib/editor/editor.css" />
-    <link rel="stylesheet" href="/static/lib/webuploader/webuploader.css" />
-    <script src="/static/lib/markdownit.js"></script>
+    <link href="https://cdn.bootcss.com/webuploader/0.1.1/webuploader.css" rel="stylesheet">
     <script src="/static/lib/webuploader/webuploader.withoutimage.js"></script>
+    <script src="/static/lib/markdownit.js"></script>
     <script src="/static/lib/editor/editor.js"></script>
     <script src="/static/lib/editor/ext.js"></script>
 {% endblock %}
