解决加载速度过慢问题

--- a/bbs/templates/base.html
+++ b/bbs/templates/base.html
@@ -6,7 +6,7 @@
     <title >{% block title %}{% endblock %} - bbs club</title>
     <link rel="icon" href="/static/img/favicon.jpg" type="image/x-icon"/>
     <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" rel="stylesheet">
-    <link href="//o4j806krb.qnssl.com/public/stylesheets/index.min.9d1ebdbb.min.css" rel="stylesheet" media="all" />
+    <link href="/static/css/v2.3.1.css" rel="stylesheet">
     <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
     {% endblock %}
 
