--- a/bbs/templates/topic/detail.html
+++ b/bbs/templates/topic/detail.html
@@ -3,7 +3,7 @@
 
 {% block head %}
     {{ super() }}
-    <script src="/static/lib/markdownit.js"></script>
+    <script src="https://cdn.bootcss.com/markdown-it/8.4.1/markdown-it.js"></script>
 {% endblock %}
 
 {% block main %}
