--- a/bbs/templates/topic/new.html
+++ b/bbs/templates/topic/new.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/static/lib/editor/editor.css" />
     <link href="https://cdn.bootcss.com/webuploader/0.1.1/webuploader.css" rel="stylesheet">
     <script src="/static/lib/webuploader/webuploader.withoutimage.js"></script>
-    <script src="/static/lib/markdownit.js"></script>
+    <script src="https://cdn.bootcss.com/markdown-it/8.4.1/markdown-it.js"></script>
     <script src="/static/lib/editor/editor.js"></script>
     <script src="/static/lib/editor/ext.js"></script>
 {% endblock %}
